delete profile route
